--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.6",
+    "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.279.0",
     "next": "latest",
     "next-auth": "^4.23.1",
     "next-pwa": "^5.6.0",
     "react": "latest",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "latest",
     "react-redux": "^8.1.2",
     "tailwind-merge": "^1.14.0",
